renamed airgap and fixed prerm
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11011 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -47,7 +47,7 @@ XB-Is-Service: true
 Description: The Untangle Email Decoder
  The Untangle Email Decoder.
 
-Package: untangle-node-airgap
+Package: untangle-node-shield
 Architecture: any
 Depends: untangle-uvm
 XB-Display-Name: Attack Blocker
