--- a/debian/rules
+++ b/debian/rules
@@ -104,7 +104,7 @@ binary-arch: install
 	@dh_md5sums
 	@dh_builddeb --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
 	# FIXME: oh, nastiness (not as nasty as Dirk's rebuildmvvm.sh, but that ain't saying much heh)
-	@cp -f ../untangle-node-nat_*`cat debian/version`*deb $(UVM_DESTDIR)/var/lib/uvm/untangle-node-nat.deb
+	@cp -f ../untangle-node-router_*`cat debian/version`*deb $(UVM_DESTDIR)/var/lib/uvm/untangle-node-router.deb
 	@dh_md5sums
 	@dh_builddeb -p mvvm --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
 
