fix phish dependency
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11169 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -876,7 +876,7 @@ Description: Spam Blocker
 
 Package: untangle-node-phish
 Architecture: any
-Depends: untangle-uvm, untangle-base-spam, untangle-clamav-config, mail, untangle-casing-http
+Depends: untangle-uvm, untangle-base-spam, untangle-clamav-config, untangle-casing-mail, untangle-casing-http
 XB-Display-Name: Phish Blocker
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: phish-node
