untangle-uvm -> untangle-vm
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11194 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@
 export DH_COMPAT=4
 
 PACKAGES := $(shell dh_listpackages)
-UVM_DESTDIR := $(CURDIR)/debian/untangle-uvm
+UVM_DESTDIR := $(CURDIR)/debian/untangle-vm
 
 TMP_NAT_DEB := /tmp/nat-transform.deb
 
