--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: untangle-uvm
+Source: untangle-vm
 Section: net
 Priority: optional
 Maintainer: Sebastien Delafond <seb@untangle.com>
@@ -16,7 +16,7 @@ Description: untangle-libuvmcore
 
 Package: untangle-casing-ftp
 Architecture: any
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: File Transfer
 XB-Untangle-Type: casing
 XB-untangle-Jar-Prefix: untangle-casing-ftp
@@ -26,7 +26,7 @@ Description: The Untangle File Transfer/FTP Decoder
 
 Package: untangle-casing-http
 Architecture: any
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: Web
 XB-Untangle-Type: casing
 XB-untangle-Jar-Prefix: untangle-casing-http
@@ -39,7 +39,7 @@ Architecture: any
 Conflicts: untangle-node-email
 Replaces: untangle-node-email
 Provides: untangle-node-email
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: Email
 XB-Untangle-Type: casing
 XB-untangle-Jar-Prefix: untangle-casing-mail
@@ -49,7 +49,7 @@ Description: The Untangle Email Decoder
 
 Package: untangle-node-shield
 Architecture: any
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: Attack Blocker
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-shield
@@ -161,7 +161,7 @@ Description: Attack Blocker
 
 Package: untangle-node-spyware
 Architecture: any
-Depends: untangle-uvm, untangle-casing-http
+Depends: untangle-vm, untangle-casing-http
 XB-Display-Name: Spyware Blocker
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-spyware
@@ -249,7 +249,7 @@ Description: Spyware Blocker
 
 Package: untangle-node-webfilter
 Architecture: any
-Depends: untangle-uvm, untangle-casing-http, untangle-urlblacklist
+Depends: untangle-vm, untangle-casing-http, untangle-urlblacklist
 XB-Display-Name: Web Filter
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-webfilter
@@ -348,7 +348,7 @@ Description: Web Filter
 
 Package: untangle-node-clam
 Architecture: any
-Depends: untangle-uvm, untangle-virus-base, untangle-clamav-config, untangle-casing-http, untangle-casing-ftp, untangle-casing-mail
+Depends: untangle-vm, untangle-virus-base, untangle-clamav-config, untangle-casing-http, untangle-casing-ftp, untangle-casing-mail
 XB-Display-Name: Virus Blocker
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-clam
@@ -455,7 +455,7 @@ Description: Virus Blocker
 
 Package: untangle-node-protofilter
 Architecture: any
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: Protocol Control
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-protofilter
@@ -577,7 +577,7 @@ Description: Protocol Control
 
 Package: untangle-node-router
 Architecture: any
-Depends: untangle-uvm, dnsmasq, untangle-casing-ftp
+Depends: untangle-vm, dnsmasq, untangle-casing-ftp
 XB-Display-Name: Router
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-router
@@ -672,7 +672,7 @@ Description: Router
 
 Package: untangle-node-firewall
 Architecture: any
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: Firewall
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-firewall
@@ -760,7 +760,7 @@ Description: Firewall
 
 Package: untangle-node-spamassassin
 Architecture: any
-Depends: untangle-uvm, untangle-base-spam, untangle-casing-mail
+Depends: untangle-vm, untangle-base-spam, untangle-casing-mail
 XB-Display-Name: Spam Blocker
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-spamassassin
@@ -876,7 +876,7 @@ Description: Spam Blocker
 
 Package: untangle-node-phish
 Architecture: any
-Depends: untangle-uvm, untangle-base-spam, untangle-clamav-config, untangle-casing-mail, untangle-casing-http
+Depends: untangle-vm, untangle-base-spam, untangle-clamav-config, untangle-casing-mail, untangle-casing-http
 XB-Display-Name: Phish Blocker
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-phish
@@ -1006,7 +1006,7 @@ Description: Phish Blocker
 
 Package: untangle-node-test
 Architecture: any
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: Test
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-test
@@ -1149,7 +1149,7 @@ Description: Test
 
 Package: untangle-node-openvpn
 Architecture: any
-Depends: untangle-uvm, openvpn, untangle-nsis-addons, sysutils, zip, openssl
+Depends: untangle-vm, openvpn, untangle-nsis-addons, sysutils, zip, openssl
 XB-Display-Name: OpenVPN
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-openvpn
@@ -1254,7 +1254,7 @@ Description: OpenVPN
 
 Package: untangle-node-ips
 Architecture: any
-Depends: untangle-uvm, untangle-casing-http, untangle-snort-rules
+Depends: untangle-vm, untangle-casing-http, untangle-snort-rules
 XB-Display-Name: Intrusion Prevention
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-ips
@@ -1361,7 +1361,7 @@ Description: Intrusion Prevention
 
 Package: untangle-node-reporting
 Architecture: any
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: Untangle Reports
 XB-Untangle-Type: node
 XB-Untangle-Jar-Prefix: untangle-node-reporting
@@ -1448,7 +1448,7 @@ Description: Untangle Reports
 
 Package: untangle-base-virus
 Architecture: any
-Depends: untangle-uvm
+Depends: untangle-vm
 XB-Display-Name: Virus Blocker Base
 XB-Untangle-Type: base
 Description: Virus Blocker Base
@@ -1456,7 +1456,7 @@ Description: Virus Blocker Base
 
 Package: untangle-base-spam
 Architecture: any
-Depends: untangle-uvm, untangle-spamassassin-update
+Depends: untangle-vm, untangle-spamassassin-update
 XB-Display-Name: Spam Blocker Base
 XB-Untangle-Type: base
 Description: Spam Blocker Base
@@ -1536,14 +1536,14 @@ Description: Untangle Client
 Package: untangle-libuvmthirdparty
 Architecture: any
 Depends: sun-java5-jre
-Conflicts: untangle-uvm (<< 3.0.0-39)
-Replaces: untangle-uvm (<< 3.0.0-39)
+Conflicts: untangle-vm (<< 3.0.0-39)
+Replaces: untangle-vm (<< 3.0.0-39)
 XB-Display-Name: Untangle Server Thirdparty Libraries
 XB-Untangle-Type: library
 Description: Untangle Server Thirdparty Libraries
  The Untangle Server Thirdparty Libraries.
 
-Package: untangle-uvm
+Package: untangle-vm
 Architecture: any
 Depends: untangle-client-windows-jre, untangle-libuvmcore, libuvm-thirdparty, sudo, untangle-iptables (>= 1.3.3), untangle-restore-tools, libxml2, untangle-dhclient-config, ntp-simple, snmpd, snmp, sg3-utils, ddclient, slapd, ldap-utils, untangle-libnfnetlink0, untangle-libnetfilter-queue0, db4.2-util, untangle-ujac2pdf, at, ebtables, atop, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl
 Pre-Depends: untangle-postgresql-config
