--- a/rakefile
+++ b/rakefile
@@ -26,7 +26,7 @@ task :kindaclean do
   Rake::StampHash.instance.clear
 end
 
-task :build => [BuildEnv::SRC['untangle-uvm'], BuildEnv::SRC['untangle-client'], BuildEnv::SRC['node']]
+task :build => [BuildEnv::SRC['untangle-vm'], BuildEnv::SRC['untangle-client'], BuildEnv::SRC['node']]
 
 task :devel => [BuildEnv::SRC['install'], BuildEnv::SRC.installTarget]
 
