--- a/debian/control
+++ b/debian/control
@@ -1021,9 +1021,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: any
-Depends: untangle-client-windows-jre, untangle-libuvmcore, libuvm-thirdparty, sudo, untangle-iptables (>= 1.3.3), untangle-restore-tools, libxml2, untangle-dhclient-config, ntp-simple, snmpd, snmp, sg3-utils, ddclient, slapd, ldap-utils, untangle-libnfnetlink0, untangle-libnetfilter-queue0, db4.2-util, untangle-ujac2pdf, at, ebtables, atop, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl
-Pre-Depends: untangle-postgresql-config
-Conflicts: dlocate, slocate
+Depends: untangle-client-windows-jre, untangle-libuvmcore, libuvm-thirdparty, sudo, untangle-iptables (>= 1.3.3), libxml2, ddclient, untangle-libnfnetlink0, untangle-libnetfilter-queue0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl
 XB-Display-Name: Untangle Server
 XB-Untangle-Type: library
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAIAAABKoV4MAAAABGdBTUEAANbY1E9YMgAAABl0
