untangle-client must depend on sun-java5-jre
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11287 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -972,7 +972,7 @@ Description: Spam Blocker Base
 
 Package: untangle-client
 Architecture: any
-Depends: untangle-client-windows-jre
+Depends: untangle-client-windows-jre, sun-java5-jre
 Provides: metavize-client
 Conflicts: metavize-client (<< 4.1)
 Replaces: metavize-client (<< 4.1)
