--- a/debian/control
+++ b/debian/control
@@ -1018,7 +1018,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: any
-Depends: untangle-client-windows-jre, untangle-libuvmcore, libuvm-thirdparty, sudo, untangle-iptables (>= 1.3.3), libxml2, ddclient, untangle-libnfnetlink0, untangle-libnetfilter-queue0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl
+Depends: untangle-client-windows-jre, untangle-libuvmcore, libuvm-thirdparty, sudo, untangle-iptables (>= 1.3.3), libxml2, ddclient, untangle-libnfnetlink0, untangle-libnetfilter-queue0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl, sg3-utils
 Conflicts: mvvm
 Replaces: mvvm
 XB-Display-Name: Untangle Server
