--- a/debian/control
+++ b/debian/control
@@ -1027,7 +1027,7 @@ Description: Spam Blocker Base
 
 Package: untangle-client
 Architecture: any
-Depends: untangle-client-windows-jre, sun-java5-jre
+Depends: untangle-vm, untangle-client-windows-jre, sun-java5-jre
 Provides: metavize-client
 Conflicts: metavize-client (<< 4.1)
 Replaces: metavize-client (<< 4.1)
@@ -1073,7 +1073,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: any
-Depends: untangle-client-windows-jre, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, untangle-iptables (>= 1.3.3), libxml2, ddclient, untangle-libnfnetlink0, untangle-libnetfilter-queue0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl, sg3-utils
+Depends: sun-java5-jre, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, untangle-iptables (>= 1.3.3), libxml2, ddclient, untangle-libnfnetlink0, untangle-libnetfilter-queue0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl, sg3-utils
 Provides: mvvm
 Conflicts: mvvm
 Replaces: mvvm
