--- a/debian/control
+++ b/debian/control
@@ -1027,7 +1027,7 @@ Description: Spam Blocker Base
 
 Package: untangle-client
 Architecture: any
-Depends: untangle-vm, untangle-client-windows-jre, sun-java5-jre
+Depends: untangle-vm, sun-java5-jre
 Provides: metavize-client
 Conflicts: metavize-client (<< 4.1)
 Replaces: metavize-client (<< 4.1)
