untangle-libuvmthirdparty must also conflict with mvvm
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11628 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -1064,7 +1064,7 @@ Description: Untangle Client
 Package: untangle-libuvmthirdparty
 Architecture: any
 Depends: sun-java5-jre
-Conflicts: libuvm-thirdparty
+Conflicts: mvvm, libuvm-thirdparty
 Provides: libuvm-thirdparty
 Replaces: libuvm-thirdparty
 XB-Display-Name: Untangle Server Thirdparty Libraries
