--- a/debian/control
+++ b/debian/control
@@ -1064,7 +1064,7 @@ Description: Untangle Client
 Package: untangle-libuvmthirdparty
 Architecture: any
 Depends: sun-java5-jre
-Conflicts: mvvm, libuvm-thirdparty
+Conflicts: mvvm (<< 5.0), libuvm-thirdparty
 Provides: libuvm-thirdparty
 Replaces: libuvm-thirdparty
 XB-Display-Name: Untangle Server Thirdparty Libraries
