--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,35 @@ Depends: ${misc:Depends}
 XB-Display-Name: Untangle Core Library
 XB-Untangle-Type: library
 XB-Is-Service: true
+XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAIAAABKoV4MAAAABGdBTUEAANbY1E9Y
+ MgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAATkSURBVHja
+ 1JhrKG1bFMftg1semyghESVKSClSSilSinyQV5S8SoqUV5RIKSJFREJuiigRpZQS
+ UconIZ9IKVIOpWzv+zt7nrvuPGuvxd77nu12x6e15lxrjjn+4/8fY65liI6ODg4O
+ 9vf39/HxcXd3d3FxcXKMOTs7/2E2Ll5fX+vr6xk0eHt7Ly8vM+rq6sqEwWBwcph9
+ +9ve39/ZQWxsrMvd3Z3JZKqtrQ0MDPTy8mIHjnBMVODq5ubm6elJqG9vb/n5+Yz/
+ gPrl5eXs7Ozp6cnR7j08PIxGIynm9vn5+ad77Pb29vHxEfcOzT2hwzABADH/4x57
+ eHhgB9a7j4iIaG1tBbOmpqabm5tPn2dlXJByXiELXPziHiMlzFnjmwjq6uoqKiqC
+ goJqamra2to+fQV/sJsIcQESsO8HGe1DsqGhobOz8/7+/uTkZHV1NS8vz/p33832
+ Uwt2+CZzyPX8/Fzc7u7upqSk2ClFO97JyMhYX1+XR9hKeHj4F7nPzMzc2NiQR8Cf
+ wS9yD/JwWB45ODiIi4uzYyltmYEkouICcokSDdpra2uQFt8MaspaEUVaWlpCQgKP
+ UVIDAgKQWW9v7/X1tbXuJycnc3NzLy8vFa6xYl9fHxekmVgtX8FZWVlZfHw8Ltlo
+ S0uLjNbo6GhRUZG17i/NptwS9KrZCLGrq4s0s+LQ0JCoNsRH+yLc7e3t6upqy9Xu
+ zGYD+EdHR5GRkWjasnSQ9dLSUl9f34GBARYV9au/v39/f19FCMWQJbM2UI9UdXR0
+ aLafkJCQi4sLUoAz0gwMYABUDDKlWR8LCwvHxsZsiJ5EEtDg4KAlmIRLlU1KSqLQ
+ ChJAi6Wlpc3NTcuCzcMsQn20WXh7e3sLCwvDw8MyBmQEgZ2enmZnZysERBTp6emk
+ gHLk5+cn+x4fHycMnv9IfHBKb4q0zczMACDXlZWVkH9lZUXhc09PT3NzM3IQt0zN
+ zs5mZWVxSyuan5+PiYmRlckzoaGhHHISExO3trZ0wVcMSEkqOyAdc3NzpJBrMYUE
+ yIIg9sjIiLhAXWyIHQBDVVWVLB/7q96r2VRMVG5F55YfVj1gc9WTwQfzkpISoueC
+ 6oHkxBTUg/zUsqmpKSUdgA9ICAcVwBuKDxr+ZAt6uU9OTsafHERYWNjh4aHIrgoJ
+ ivTOzg4lSKYemVI6oWbudcGHNcXFxQhPxhYOE01UVBS0Utal3kE6liYMOdlgU15e
+ zrZkOVgFPmTmNTBX5VUhGs6gGLOIAm7COCoB2KgeZgecybq7uzWLsW70LE2t0Dz3
+ ER8ICymKniY+XBhUzj+q7S4uLubk5NjWcDUpgydRyOhpjY2NovOKlkPN0aus1CUq
+ BN9S1roHRjwp0RMcq9PoGARqqqHsCTxguDgHTE9PowU8UTDksq+Xfm33JIyFBLaE
+ ywjhMsiGEB4FRxOYP82GJ/bKiUFUCzaHCNvb221wT38U32CWRn8jUL2jDkb0Yh8f
+ PPOvznpAoloLKep19N9/1ORUg8xUZ98P+tZvdm/5WQNVNVXnEPeADytpqeI2NTVV
+ 5rnD3YvTGFJGFIie2kybsf7rTv7Gs/NrHv4jv4mJCcoq9ceyNmt2bXSr+sK1/2fC
+ 8fFxQUGBTa+YTKarqyt2YDQa1b8XvsYI+rvZxM+Vb07/kf0SvX2q/d/bXwIMAJ+e
+ 3tKQEpgPAAAAAElFTkSuQmCC
 Description: Untangle Core Library
  Untangle Core Library.
 
@@ -1060,6 +1089,35 @@ Provides: libuvm-thirdparty
 Replaces: libuvm-thirdparty
 XB-Display-Name: Untangle Server Thirdparty Libraries
 XB-Untangle-Type: library
+XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAIAAABKoV4MAAAABGdBTUEAANbY1E9Y
+ MgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAATkSURBVHja
+ 1JhrKG1bFMftg1semyghESVKSClSSilSinyQV5S8SoqUV5RIKSJFREJuiigRpZQS
+ UconIZ9IKVIOpWzv+zt7nrvuPGuvxd77nu12x6e15lxrjjn+4/8fY65liI6ODg4O
+ 9vf39/HxcXd3d3FxcXKMOTs7/2E2Ll5fX+vr6xk0eHt7Ly8vM+rq6sqEwWBwcph9
+ +9ve39/ZQWxsrMvd3Z3JZKqtrQ0MDPTy8mIHjnBMVODq5ubm6elJqG9vb/n5+Yz/
+ gPrl5eXs7Ozp6cnR7j08PIxGIynm9vn5+ad77Pb29vHxEfcOzT2hwzABADH/4x57
+ eHhgB9a7j4iIaG1tBbOmpqabm5tPn2dlXJByXiELXPziHiMlzFnjmwjq6uoqKiqC
+ goJqamra2to+fQV/sJsIcQESsO8HGe1DsqGhobOz8/7+/uTkZHV1NS8vz/p33832
+ Uwt2+CZzyPX8/Fzc7u7upqSk2ClFO97JyMhYX1+XR9hKeHj4F7nPzMzc2NiQR8Cf
+ wS9yD/JwWB45ODiIi4uzYyltmYEkouICcokSDdpra2uQFt8MaspaEUVaWlpCQgKP
+ UVIDAgKQWW9v7/X1tbXuJycnc3NzLy8vFa6xYl9fHxekmVgtX8FZWVlZfHw8Ltlo
+ S0uLjNbo6GhRUZG17i/NptwS9KrZCLGrq4s0s+LQ0JCoNsRH+yLc7e3t6upqy9Xu
+ zGYD+EdHR5GRkWjasnSQ9dLSUl9f34GBARYV9au/v39/f19FCMWQJbM2UI9UdXR0
+ aLafkJCQi4sLUoAz0gwMYABUDDKlWR8LCwvHxsZsiJ5EEtDg4KAlmIRLlU1KSqLQ
+ ChJAi6Wlpc3NTcuCzcMsQn20WXh7e3sLCwvDw8MyBmQEgZ2enmZnZysERBTp6emk
+ gHLk5+cn+x4fHycMnv9IfHBKb4q0zczMACDXlZWVkH9lZUXhc09PT3NzM3IQt0zN
+ zs5mZWVxSyuan5+PiYmRlckzoaGhHHISExO3trZ0wVcMSEkqOyAdc3NzpJBrMYUE
+ yIIg9sjIiLhAXWyIHQBDVVWVLB/7q96r2VRMVG5F55YfVj1gc9WTwQfzkpISoueC
+ 6oHkxBTUg/zUsqmpKSUdgA9ICAcVwBuKDxr+ZAt6uU9OTsafHERYWNjh4aHIrgoJ
+ ivTOzg4lSKYemVI6oWbudcGHNcXFxQhPxhYOE01UVBS0Utal3kE6liYMOdlgU15e
+ zrZkOVgFPmTmNTBX5VUhGs6gGLOIAm7COCoB2KgeZgecybq7uzWLsW70LE2t0Dz3
+ ER8ICymKniY+XBhUzj+q7S4uLubk5NjWcDUpgydRyOhpjY2NovOKlkPN0aus1CUq
+ BN9S1roHRjwp0RMcq9PoGARqqqHsCTxguDgHTE9PowU8UTDksq+Xfm33JIyFBLaE
+ ywjhMsiGEB4FRxOYP82GJ/bKiUFUCzaHCNvb221wT38U32CWRn8jUL2jDkb0Yh8f
+ PPOvznpAoloLKep19N9/1ORUg8xUZ98P+tZvdm/5WQNVNVXnEPeADytpqeI2NTVV
+ 5rnD3YvTGFJGFIie2kybsf7rTv7Gs/NrHv4jv4mJCcoq9ceyNmt2bXSr+sK1/2fC
+ 8fFxQUGBTa+YTKarqyt2YDQa1b8XvsYI+rvZxM+Vb07/kf0SvX2q/d/bXwIMAJ+e
+ 3tKQEpgPAAAAAElFTkSuQmCC
 Description: Untangle Server Thirdparty Libraries
  The Untangle Server Thirdparty Libraries.
 
