--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: untangle-libuvmcore
 Architecture: i386
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 XB-Display-Name: Untangle Core Library
 XB-Untangle-Type: library
 XB-Is-Service: true
@@ -1123,7 +1123,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: any
-Depends: sun-java5-jre, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, untangle-ntpdate-config, untangle-ifrename-config, untangle-iptables (>= 1.3.3), libxml2, ddclient, untangle-libnfnetlink0, untangle-libnetfilter-queue0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl, sg3-utils, untangle-postgresql-config
+Depends: sun-java5-jre, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, untangle-ntpdate-config, untangle-ifrename-config, untangle-iptables (>= 1.3.3), ddclient, untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, sg3-utils, pciutils, untangle-postgresql-config
 Recommends: untangle-dhclient-config, untangle-postgresql-config, untangle-iptables
 Provides: mvvm
 Conflicts: mvvm
