--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: untangle-vm
 Section: net
 Priority: optional
 Maintainer: Sebastien Delafond <seb@untangle.com>
-Build-Depends: debhelper (>> 3.0.0), unzip, build-essential, sun-java5-jdk, libxml2-dev, untangle-iptables-dev (>= 1.3.3), untangle-libnfnetlink-dev, untangle-libnetfilter-queue-dev, libsysfs-dev, linux-kernel-headers, dput, rake (>= 0.7.0-1build1), libdbi-ruby
+Build-Depends: debhelper (>> 3.0.0), unzip, build-essential, sun-java5-jdk, libxml2-dev, untangle-iptables-dev (>= 1.3.3), untangle-libnfnetlink-dev, untangle-libnetfilter-queue-dev, libsysfs-dev, linux-kernel-headers, dput, rake (>= 0.7.0-1build1)
 Standards-Version: 3.7.2
 
 Package: untangle-libuvmcore
@@ -1123,7 +1123,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: any
-Depends: sun-java5-jre, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, untangle-ntpdate-config, untangle-ifrename-config, untangle-iptables (>= 1.3.3), ddclient, untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, sg3-utils, pciutils, untangle-postgresql-config, ruby
+Depends: sun-java5-jre, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, untangle-ntpdate-config, untangle-ifrename-config, untangle-iptables (>= 1.3.3), ddclient, untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, sg3-utils, pciutils, untangle-postgresql-config, libdbi-ruby
 Recommends: untangle-dhclient-config, untangle-postgresql-config, untangle-iptables
 Provides: mvvm
 Conflicts: mvvm
